# imnodes

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml
src/: imnodes.cpp  imnodes.hpp  imnodes_internal.hpp
